@@ -1,4 +1,4 @@
-.Dd January 13, 2013
+.Dd March 31, 2013
 .Dt bdemount
 .Os libbde
 .Sh NAME
@@ -23,7 +23,7 @@ is part of the
 .Nm libbde
 package.
 .Nm libbde
-is a library to support the BitLocker Drive Encryption (BDE) format
+is a library to access the BitLocker Drive Encryption (BDE) format
 .Pp
 .Ar source
 is the source file.
@@ -69,7 +69,7 @@ http://code.google.com/p/libbde/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
-Copyright 2011-2013 Joachim Metz <joachim.metz@gmail.com>.
+Copyright 2011-2013, Joachim Metz <joachim.metz@gmail.com>.
 This is free software; see the source for copying conditions. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .Sh SEE ALSO
 .Xr bdeinfo 1
